# vala-gstreamer-plugin-example

./: .build.yml  COPYING  README.md  meson.build
src/: gst.vapi  gstvalaexample.vala  meson.build  valafilter.vala
